added ajax request, and populaded images

--- a/app/index.html
+++ b/app/index.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
-<html ng-app="app" ng-strict-di="true">
+<html ng-app="app">
 
 <head>
     <title>Canvas</title>
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./app/css/main.css">
 
     <base href="/">
 </head>
 
 <body>
     <div ui-view></div>
-
+    <!--debs-->
     <script src="../bower_components/angular/angular.min.js"></script>
     <script src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="../bower_components/ng-file-upload/ng-file-upload.min.js"></script>
+    <script src="../bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+
+    <!--lib-->
     <script src="./app/scripts/app.js"></script>
+    <script src="./app/scripts/app.data.js"></script>
     <script src="./app/scripts/app.core.js"></script>
     <script src="./app/scripts/app.layout.js"></script>
     <script src="./app/scripts/app.canv.js"></script>
-    <!--<script src="./app/scripts/app.main.js"></script>-->
+    <script src="./app/scripts/directives/form.upload.js"></script>
+
+
 </body>
 
 </html>
