--- a/app/scripts/app.canv.html
+++ b/app/scripts/app.canv.html
@@ -1,9 +1,10 @@
 <div class="block">
 
-    <div class="row" dnd-list="vm.tempImages">
-        <div ng-repeat="item in vm.tempImages" class="col-xs-2 col-md-2 canvas-image-item" ng-show="item.src.length>0" dnd-draggable="item" dnd-effect-allowed="move" dnd-moved="vm.tempImages.splice($index, 1)">
+    <div class="row" dnd-list="vm.tempImages" dnd-allowed-types="['src']" ng-init="imageItemSelected=null; testItem">
 
 
+        <div ng-repeat="item in vm.tempImages | unique: '$$hashKey'" class="col-xs-2 col-md-2 canvas-image-item" dnd-draggable="item" ng-mouseup="imageItemSelected=null" ng-mousedown="imageItemSelected = item" ng-class="{'selected': imageItemSelected === item}"
+            dnd-type="'src'" dnd-effect-allowed="move" dnd-moved="vm.tempImages.splice($index, 1)">
             <div class="inner-w p5">
                 <a href="#" class="thumbnail">
                                     <img ng-src="{{item.src}}" ng-if="item.src.length>0" />                       
@@ -11,8 +12,9 @@
             </div>
         </div>
     </div>
-    <div class="row" class="canvas-text" dnd-list="vm.tempText">
-        <div ng-repeat="item in vm.tempText" class="col-xs-2 col-md-2 canvas-text-item" dnd-draggable="item" dnd-effect-allowed="move" dnd-moved="vm.tempText.splice($index, 1)" ng-show="item.name.length>0">
+    <div dnd-allowed-types="['text']" class="row" class="canvas-text" dnd-list="vm.tempText" ng-init="textItemSelected=null">
+        <div ng-init="textCount=vm.tempText.length" ng-repeat="item in vm.tempText | unique: '$$hashKey'" class="col-xs-2 col-md-2 canvas-text-item" dnd-draggable="item" dnd-effect-allowed="move" dnd-moved="vm.tempText.splice($index, 1)" ng-show="item.name.length>0"
+            dnd-type="'text'" ng-mouseup="textItemSelected=null" ng-mousedown="textItemSelected = item" ng-class="{'selected': textItemSelected === item}" dnd-disable-if="vm.tempText.length > textCount">
             <div class="alert alert-info">
                 <strong>{{item.name}}</strong>
             </div>
