fixing index ussues, and storage issues

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,9 @@
     <title>Canvas</title>
     <link rel="stylesheet" type="text/css" href="./app/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./app/css/main.css">
-
+    <script>
+        var API_MAIN = "<%= API_MAIN %>";
+    </script>
     <base href="/">
 </head>
 
@@ -25,7 +27,7 @@
     <script src="./app/scripts/data.services/app.data.js"></script>
     <script src="./app/scripts/app.core.js"></script>
     <script src="./app/scripts/app.layout.js"></script>
-    <script src="./app/scripts/app.canv.js"></script>
+    <script src="./app/scripts/directives/app.canv.js"></script>
     <script src="./app/scripts/directives/form.upload.js"></script>
 
 </body>
