--- a/app/scripts/app.layout.html
+++ b/app/scripts/app.layout.html
@@ -1,4 +1,4 @@
 <!-- main -->
-<div class="container-fluid">
+<div class="container">
     <div ng-include="'./app/scripts/app.main.html'"></div>
 </div>
